--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.5",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^19.1.0",
     "react-multi-carousel": "^2.8.6",
     "react-router": "^7.5.0",
