--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^19.1.0",
     "react-multi-carousel": "^2.8.6",
+    "react-paginate": "^8.3.0",
     "react-router": "^7.5.0",
     "react-router-dom": "^7.5.0"
   },
