--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-multi-carousel": "^2.8.6",
     "react-paginate": "^8.3.0",
     "react-router": "^7.5.0",
-    "react-router-dom": "^7.5.0"
+    "react-router-dom": "^7.5.0",
+    "react-youtube": "^10.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
